heimdall_sources = files (
    'source/Arguments.cpp',
    'source/BridgeManager.cpp',
    'source/ClosePcScreenAction.cpp',
    'source/DetectAction.cpp',
    'source/DownloadPitAction.cpp',
    'source/FlashAction.cpp',
    'source/HelpAction.cpp',
    'source/InfoAction.cpp',
    'source/Interface.cpp',
    'source/PrintPitAction.cpp',
    'source/Utility.cpp',
    'source/VersionAction.cpp',
)

heimdall_headers = files (
    'include/heimdall/Arguments.h',
    'include/heimdall/BeginDumpPacket.h',
    'include/heimdall/BeginSessionPacket.h',
    'include/heimdall/BridgeManager.h',
    'include/heimdall/ClosePcScreenAction.h',
    'include/heimdall/ControlPacket.h',
    'include/heimdall/DetectAction.h',
    'include/heimdall/DeviceTypePacket.h',
    'include/heimdall/DownloadPitAction.h',
    'include/heimdall/DumpPartFileTransferPacket.h',
    'include/heimdall/DumpPartPitFilePacket.h',
    'include/heimdall/DumpResponse.h',
    'include/heimdall/EnableTFlashPacket.h',
    'include/heimdall/EndFileTransferPacket.h',
    'include/heimdall/EndModemFileTransferPacket.h',
    'include/heimdall/EndPhoneFileTransferPacket.h',
    'include/heimdall/EndPitFileTransferPacket.h',
    'include/heimdall/EndSessionPacket.h',
    'include/heimdall/FilePartSizePacket.h',
    'include/heimdall/FileTransferPacket.h',
    'include/heimdall/FlashAction.h',
    'include/heimdall/FlashPartFileTransferPacket.h',
    'include/heimdall/FlashPartPitFilePacket.h',
    'include/heimdall/Heimdall.h',
    'include/heimdall/HelpAction.h',
    'include/heimdall/InboundPacket.h',
    'include/heimdall/InfoAction.h',
    'include/heimdall/Interface.h',
    'include/heimdall/OutboundPacket.h',
    'include/heimdall/Packet.h',
    'include/heimdall/PitFilePacket.h',
    'include/heimdall/PitFileResponse.h',
    'include/heimdall/PrintPitAction.h',
    'include/heimdall/ReceiveFilePartPacket.h',
    'include/heimdall/ResponsePacket.h',
    'include/heimdall/SendFilePartPacket.h',
    'include/heimdall/SendFilePartResponse.h',
    'include/heimdall/SessionSetupPacket.h',
    'include/heimdall/SessionSetupResponse.h',
    'include/heimdall/SetupSessionPacket.h',
    'include/heimdall/SetupSessionResponse.h',
    'include/heimdall/TotalBytesPacket.h',
    'include/heimdall/Utility.h',
    'include/heimdall/VersionAction.h',
)

heimdall_sources += conf_header

heimdall_inc_dir = include_directories('include')

heimdall_bin = executable('heimdall',
    sources: heimdall_sources + files('source/main.cpp') + heimdall_headers,
    include_directories : [conf_inc_dir, libpit_inc_dir, heimdall_inc_dir],
    dependencies: [libusb_dep, thread_dep],
    link_with: libpit_dep,
    install: true,
)

heimdall_lib = shared_library('heimdall',
    sources: heimdall_sources + heimdall_headers,
    include_directories : [conf_inc_dir, libpit_inc_dir, heimdall_inc_dir],
    dependencies: [libusb_dep, thread_dep],
    link_with: libpit_dep,
    install: true,
)